--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,412 @@
 // app global css in SCSS form
+@import url("https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700&family=Inter:wght@300;400;500;600;700&family=Montserrat:wght@300;400;500;600;700&family=Unica+One&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+@font-face {
+  font-family: customBold;
+  src: url(../fonts/Evolventa-Bold-BF63c0b29a3afd5.ttf);
+}
+
+@font-face {
+  font-family: customBoldOblique;
+  src: url(../fonts/Evolventa-BoldOblique-BF63c0b29a43bfb.ttf);
+}
+
+@font-face {
+  font-family: customMedium;
+  src: url(../fonts/Evolventa-Oblique-BF63c0b29804462.ttf);
+}
+@font-face {
+  font-family: customRegular;
+  src: url(../fonts/Evolventa-Regular-BF63c0b29a31dbb.ttf);
+}
+@font-face {
+  font-family: campton;
+  src: url(../fonts/Campton-BoldDEMO.ttf);
+}
+@font-face {
+  font-family: munt;
+  src: url(../fonts/Dailymunt-OVwBo.otf);
+}
+
+body {
+  font-family: "customRegular", sans-serif;
+  background: #f0f2f4;
+}
+
+a {
+  text-decoration: none;
+}
+li {
+  list-style-type: none;
+}
+
+img {
+  width: 100%;
+}
+
+// utility
+.container {
+  max-width: 1400px;
+  width: 90%;
+  margin: 0 auto;
+}
+
+section {
+  padding: 150px 0;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  gap: 2rem;
+}
+.grid.alt .left {
+  order: 2;
+}
+.grid.alt .right {
+  order: 1;
+}
+// typography
+
+.paragraphText {
+  color: #fff;
+  // font-family: "campton", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 196%; /* 39.2px */
+}
+.maintext {
+  color: #fff;
+  font-family: "customBold";
+  font-size: 76px;
+  // font-size: 96px;
+  font-weight: 700;
+  line-height: 97.5%; /* 93.6px */
+  text-transform: uppercase;
+}
+.subtext {
+  color: #1b3459;
+  font-family: "campton", sans-serif;
+  font-size: 16.155px;
+  // font-size: 20.155px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 145.5%; /* 29.326px */
+}
+//nav
+header {
+  padding: 1rem 0;
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+}
+header .navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+header .navbar ul {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+.nav_item {
+  color: #fff;
+  font-size: 14.124px;
+  // font-size: 16.124px;
+  padding: 0;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 138.5%; /* 22.332px */
+}
+
+.nav_item.contact {
+  color: #fff;
+  font-family: "customBold";
+  font-size: 18.594px;
+  // font-size: 23.594px;
+  font-weight: 700;
+  line-height: 133%; /* 31.38px */
+  border: 2px solid #f1b700;
+  background: #1b3459;
+  padding: 1rem;
+}
+
+// hero
+
+.hero {
+  background: #1b3459;
+  padding: 10rem 0 0;
+  position: relative;
+}
+
+.hero .maintext {
+  color: #fff;
+}
+
+.hero > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 4rem;
+}
+.hero > div > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  gap: 1.5rem;
+  position: relative;
+}
+
+.hero .subtext {
+  border-radius: 8px;
+  background: #dca236;
+  padding: 6.046px 23.721px 5.265px 22.171px;
+}
+
+.hero .getstarted .q-btn {
+  font-family: "customBold", sans-serif;
+  color: #fff;
+  font-size: 18.594px;
+  // font-size: 23.594px;
+  font-weight: 700;
+  line-height: 133%; /* 31.38px */
+}
+
+.hero .smallImgs img {
+  width: 134.267px;
+  height: 148.376px;
+  position: absolute;
+  object-fit: contain;
+}
+
+.hero .smallImgs {
+  img:nth-child(1) {
+    top: -7%;
+    right: -20%;
+    width: 91.649px;
+    height: 107px;
+  }
+  img:nth-child(2) {
+    top: -7%;
+    left: -20%;
+    width: 91.649px;
+    height: 107px;
+  }
+  img:nth-child(3) {
+    bottom: 5%;
+    left: -10%;
+    width: 89.847px;
+    height: 91.297px;
+  }
+  img:nth-child(4) {
+    bottom: 5%;
+    right: -10%;
+    width: 73.723px;
+    height: 81.785px;
+  }
+}
+
+.hero .centerimg {
+  // clip-path: polygon(100% 0, 0 0, 100% 11%);
+  background: #dca236;
+  border: #f1b700;
+  width: 100% !important;
+  position: relative;
+  z-index: 1;
+  display: block;
+  height: 50px;
+  margin-top: -3%;
+}
+.hero::after {
+  content: "";
+  position: absolute;
+  clip-path: polygon(100% 0, 0 0, 100% 89%);
+  height: 40px;
+  width: 100%;
+  background: #dca236;
+}
+.hero .centerimg img {
+  width: 146px;
+  height: 146px;
+  // width: 196px;
+  // height: 196px;
+  border-radius: 20851.064px;
+  border: 8.575px solid #dca236;
+  background: #1b3459;
+  position: absolute;
+}
+
+// section
+
+section > div h2,
+section > div h5 {
+  margin: 0.5rem 0;
+}
+section.intro > div p {
+  max-width: 70%;
+  margin: 0 auto;
+}
+
+section.intro {
+  padding: 20rem 0 10rem;
+  h2 {
+    position: relative;
+  }
+
+  div img {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 80%;
+    margin: 0 auto;
+    top: -230%;
+  }
+
+  .video_area {
+    max-width: 1064.559px;
+    width: 80%;
+    margin: 2rem auto 0;
+  }
+}
+
+section h3 {
+  color: #ffc655;
+  font-family: "munt", sans-serif;
+  font-size: 30.28px;
+  font-weight: 400;
+  line-height: 201%; /* 72.922px */
+}
+section .left p {
+  color: #fff;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 190%; /* 40.6px */
+}
+
+section.icon {
+  background: #1b3459;
+  h3 {
+    margin-bottom: 2rem;
+  }
+  h2 {
+    margin-bottom: 2rem;
+    padding-bottom: 10rem;
+    // width: fit-content;
+    position: relative;
+    color: white;
+
+    img {
+      width: 350px;
+      position: absolute;
+      top: 25%;
+      left: 10%;
+      transform: translateY(-50%);
+    }
+  }
+
+  .q-btn {
+    color: #fff;
+    span {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  .right {
+    img {
+      object-fit: contain;
+    }
+  }
+}
+
+@media (max-width: 1100px) {
+  // typography
+
+  .paragraphText {
+    font-size: 16px;
+  }
+  .maintext {
+    font-size: 56px;
+  }
+  .subtext {
+    font-size: 14.155px;
+  }
+  //nav
+
+  header .navbar ul {
+    gap: 1rem;
+  }
+
+  .nav_item {
+    font-size: 13.124px;
+  }
+
+  .nav_item.contact {
+    font-size: 16.594px;
+  }
+
+  // hero
+
+  .hero .getstarted .q-btn {
+    font-size: 16.594px;
+  }
+
+  .hero .smallImgs img {
+    width: 114.267px;
+    height: 128.376px;
+  }
+
+  .hero .smallImgs {
+    img:nth-child(1) {
+      top: -7%;
+      right: -30%;
+      width: 81.649px;
+      height: 97px;
+    }
+    img:nth-child(2) {
+      top: -7%;
+      left: -30%;
+      width: 81.649px;
+      height: 97px;
+    }
+    img:nth-child(3) {
+      bottom: 5%;
+      left: -10%;
+      width: 79.847px;
+      height: 71.297px;
+    }
+    img:nth-child(4) {
+      bottom: 5%;
+      right: -10%;
+      width: 63.723px;
+      height: 71.785px;
+    }
+  }
+
+  .hero .centerimg img {
+    width: 126px;
+    height: 126px;
+    border: 5.575px solid #dca236;
+  }
+
+  section h3 {
+    font-size: 25.28px;
+  }
+
+  // section
+}
