--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -29,6 +29,10 @@
   src: url(../fonts/Campton-BoldDEMO.ttf);
 }
 @font-face {
+  font-family: camptonSlim;
+  src: url(../fonts/Campton-LightDEMO.ttf);
+}
+@font-face {
   font-family: munt;
   src: url(../fonts/Dailymunt-OVwBo.otf);
 }
@@ -49,15 +53,20 @@ img {
   width: 100%;
 }
 
+p {
+  font-weight: 400;
+}
+
 // utility
 .container {
-  max-width: 1400px;
+  max-width: 1300px;
   width: 90%;
   margin: 0 auto;
 }
 
 section {
   padding: 150px 0;
+  margin-top: -0.5%;
 }
 
 .grid {
@@ -65,6 +74,13 @@ section {
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
   gap: 2rem;
+
+  .right {
+    img {
+      max-height: 500px;
+      object-fit: contain;
+    }
+  }
 }
 .grid.alt .left {
   order: 2;
@@ -72,14 +88,99 @@ section {
 .grid.alt .right {
   order: 1;
 }
+
+/*-----------------------------------*\
+  #LOADING
+\*-----------------------------------*/
+
+.loading {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #122136;
+  z-index: 20;
+  transform-origin: bottom;
+  transition: 0.5s cubic-bezier(0.51, 0.03, 0.64, 0.28);
+  transition-delay: 0.5s;
+}
+
+.loading.loaded {
+  transform: scaleY(0);
+  pointer-events: none;
+}
+
+.loading > * {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: 0.5s ease;
+}
+
+.loading img {
+  max-width: 300px;
+}
+
+.loading.loaded > * {
+  opacity: 0;
+}
+
+.loading .circle {
+  animation: rotate360 1.2s linear infinite;
+}
+
+@keyframes rotate360 {
+  0% {
+    transform: translate(-50%, -50%) rotate(0);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(1turn);
+  }
+}
+
+// scroll reveal
+
+[data-reveal] {
+  transform: translateY(50px);
+  opacity: 0;
+  transition: 1000ms cubic-bezier(0.03, 0.98, 0.52, 0.99) 0s;
+}
+
+[data-reveal="left"] {
+  transform: translate(-50px, 0);
+}
+
+[data-reveal="right"] {
+  transform: translate(50px, 0);
+}
+
+[data-reveal].revealed {
+  transform: translate(0, 0);
+  opacity: 1;
+}
+
 // typography
 
 .paragraphText {
   color: #fff;
-  // font-family: "campton", sans-serif;
   font-size: 20px;
+  font-weight: 700;
+  line-height: 196%; /* 39.2px */
+}
+.paragraphsmallText {
+  color: #fff;
+  font-size: 12px;
   font-weight: 400;
   line-height: 196%; /* 39.2px */
+}
+
+.placeText {
+  font-family: "campton", sans-serif;
+  font-size: 20.024px;
+  font-weight: 700;
+  line-height: 196%; /* 49.048px */
 }
 .maintext {
   color: #fff;
@@ -99,12 +200,34 @@ section {
   font-weight: 700;
   line-height: 145.5%; /* 29.326px */
 }
+
+.h3 {
+  color: #fff;
+  font-family: "camptonSlim", sans-serif;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 157%; /* 56.52px */
+  text-transform: uppercase;
+}
+
+p.bold {
+  color: #ffc655;
+  font-family: "customBold", sans-serif;
+  font-size: 25.396px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 138.5%; /* 43.483px */
+}
 //nav
 header {
   padding: 1rem 0;
   position: absolute;
   z-index: 1;
   width: 100%;
+}
+header.rel {
+  position: relative;
+  background: #1b3459;
 }
 header .navbar {
   display: flex;
@@ -229,13 +352,13 @@ header .navbar ul {
   z-index: 1;
   display: block;
   height: 50px;
-  margin-top: -3%;
+  margin-top: -4%;
 }
 .hero::after {
   content: "";
   position: absolute;
   clip-path: polygon(100% 0, 0 0, 100% 89%);
-  height: 40px;
+  height: 100px;
   width: 100%;
   background: #dca236;
 }
@@ -334,6 +457,734 @@ section.icon {
   }
 }
 
+section.quotes {
+  background: #1b3459;
+  position: relative;
+  padding: 150px 0 170px;
+  .quote {
+    border-top: 2.016px solid #ffc655;
+    border-bottom: 2.016px solid #ffc655;
+    position: relative;
+    padding: 120px 0;
+
+    h3 {
+      text-align: center;
+      max-width: 80%;
+      margin: 0 auto;
+    }
+
+    p {
+      text-align: center;
+    }
+    &::before {
+      content: "";
+      height: 4.039px;
+      // height: 5.039px;
+      width: 131.477px;
+      // width: 191.477px;
+      position: absolute;
+      background: #dca236;
+      top: -10%;
+      left: 45%;
+      transform: rotate(90deg) translateX(-50%);
+    }
+    &::after {
+      content: "";
+      height: 4.039px;
+      width: 131.477px;
+      background: #dca236;
+      position: absolute;
+      bottom: -43%;
+      left: 45%;
+      transform: rotate(90deg) translateX(-50%);
+    }
+
+    img {
+      width: 40px;
+      position: absolute;
+
+      &:first-of-type {
+        left: 20%;
+        top: 10%;
+      }
+      &:last-of-type {
+        right: 20%;
+        bottom: 10%;
+      }
+    }
+  }
+}
+
+section.manzo {
+  background: #1b3459;
+  position: relative;
+  .container {
+    padding-bottom: 7rem;
+    border-bottom: 2px solid #ffc655;
+  }
+  .q-btn {
+    color: #fff;
+    span {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+}
+section.event {
+  background: #1b3459;
+  padding: 70px 0;
+  h3 {
+    margin-bottom: 2rem;
+  }
+  h2 {
+    margin-bottom: 2rem;
+    padding-bottom: 10rem;
+    // width: fit-content;
+    position: relative;
+    color: white;
+
+    img {
+      width: 350px;
+      position: absolute;
+      top: 25%;
+      left: 10%;
+      transform: translateY(-50%);
+    }
+  }
+
+  .container {
+    padding-bottom: 5rem;
+    border-bottom: 2px solid #ffc655;
+  }
+
+  .grid {
+    grid-template-columns: unset;
+    grid-template-areas:
+      "text text img img"
+      "imgOne imgTwo imgThree imgFour";
+    gap: 1.5rem;
+
+    img {
+      // width: 250px;
+      height: 250px;
+      object-fit: cover;
+    }
+  }
+
+  .left {
+    grid-area: text;
+    max-width: 600px;
+  }
+  .right {
+    grid-area: img;
+    img {
+      height: auto;
+      max-height: 500px;
+      object-fit: contain;
+    }
+  }
+  .one {
+    grid-area: imgOne;
+  }
+  .two {
+    grid-area: imgTwo;
+  }
+  .three {
+    grid-area: imgThree;
+  }
+  .four {
+    grid-area: imgFour;
+  }
+}
+section.gallery {
+  // background: #1b3459;
+  background: #ffff;
+
+  padding: 70px 0;
+  h3 {
+    margin-bottom: 2rem;
+  }
+  h2 {
+    margin-bottom: 2rem;
+    padding-bottom: 4rem;
+    // width: fit-content;
+    position: relative;
+    color: white;
+
+    img {
+      width: 450px;
+      position: absolute;
+      top: 25%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
+
+  .grid-wrapper > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .grid-wrapper > div > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+  }
+
+  .grid-wrapper {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-auto-rows: 200px;
+    grid-auto-flow: dense;
+  }
+  .grid-wrapper .wide {
+    grid-column: span 2;
+  }
+  .grid-wrapper .tall {
+    grid-row: span 2;
+  }
+  .grid-wrapper .big {
+    grid-column: span 2;
+    grid-row: span 2;
+  }
+}
+
+section.press {
+  h2 {
+    margin-bottom: 2rem;
+    padding-bottom: 4rem;
+    position: relative;
+    text-align: right;
+    span:first-of-type {
+      font-weight: 400;
+      font-family: "customRegular", sans-serif;
+    }
+    img {
+      width: 500px;
+      position: absolute;
+      top: 25%;
+      left: 30%;
+      transform: translate(-50%, -50%);
+    }
+  }
+
+  p {
+    color: black;
+  }
+
+  .left {
+    h5 {
+      color: #1b3459;
+      font-family: "customBold", sans-serif;
+      font-size: 26.249px;
+      font-weight: 700;
+      line-height: 146.5%; /* 60.144px */
+      // line-height: 186.5%; /* 60.144px */
+      margin: 2rem 0;
+    }
+  }
+
+  .left > div {
+    h6 {
+      color: #1b3459;
+      font-size: 18.187px;
+      font-weight: 400;
+      line-height: 201%;
+    }
+  }
+}
+
+section.quotes.tw {
+  padding: 210px 0;
+}
+section.winners {
+  background: #1b3459;
+
+  h2 {
+    margin-bottom: 2rem;
+    padding-bottom: 4rem;
+    position: relative;
+    // text-align: right;
+    span:first-of-type {
+      font-weight: 400;
+      font-family: "customRegular", sans-serif;
+    }
+    img {
+      width: 500px;
+      position: absolute;
+      top: 25%;
+      left: 30%;
+      transform: translate(-50%, -50%);
+    }
+  }
+
+  .container {
+    padding-bottom: 5rem;
+    border-bottom: 2px solid #ffc655;
+  }
+
+  nav ul {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 1rem;
+    margin: 5rem 0;
+    li .q-btn {
+      color: #fff;
+      font-family: "campton", sans-serif;
+      font-size: 20px;
+      font-weight: 700;
+      opacity: 0.4;
+      line-height: 196%; /* 47.04px */
+      &.active {
+        color: #ffc655;
+        opacity: 1;
+        text-decoration: underline;
+      }
+    }
+  }
+  .winner {
+    div:nth-child(1) {
+      position: relative;
+      p {
+        position: absolute;
+        bottom: -3%;
+        left: 0;
+        display: inline-flex;
+        padding: 3.128px 19.36px 2.452px 19.811px;
+        justify-content: center;
+        align-items: center;
+        color: #1b3459;
+        background: white;
+      }
+    }
+    .q-btn {
+      color: white;
+    }
+  }
+}
+section.press.honorary {
+  h2 {
+    margin-bottom: 2rem;
+    padding-bottom: 4rem;
+    position: relative;
+    text-align: center;
+    span:first-of-type {
+      font-weight: 400;
+      font-family: "customRegular", sans-serif;
+    }
+    img {
+      width: 500px;
+      position: absolute;
+      top: 25%;
+      left: 30%;
+      transform: translate(-50%, -50%);
+    }
+  }
+
+  h3 {
+    color: #1b3459;
+  }
+
+  .right {
+    img {
+      max-height: 500px;
+      object-fit: contain;
+    }
+  }
+}
+section.event.centre {
+  h2 {
+    img {
+      width: 700px;
+      position: absolute;
+      top: 25%;
+      left: 40%;
+      transform: translate(-50%, -50%);
+    }
+  }
+
+  h3 {
+    color: #1b3459;
+  }
+
+  .right {
+    img {
+      max-height: 500px;
+      object-fit: contain;
+    }
+  }
+}
+section.event.started {
+  padding: 200px 0 100px;
+  h2 {
+    img {
+      width: 600px;
+      position: absolute;
+      top: 25%;
+      left: 30%;
+      transform: translate(-50%, -50%);
+    }
+  }
+
+  p {
+    margin-bottom: 0;
+  }
+  .lists {
+    background: #f0f2f4;
+    padding: 3rem 2rem;
+    h4 {
+      color: #1b3459;
+      font-size: 28px;
+      font-weight: 700;
+      line-height: 151.5%; /* 48.48px */
+    }
+
+    li {
+      color: #1b3459;
+      font-size: 14.99px;
+      font-weight: 700;
+      line-height: 172%; /* 29.223px */
+      margin: 1.5rem 0;
+      img {
+        width: 27.491px;
+        height: 13.318px;
+        margin-top: 0.6rem;
+      }
+    }
+
+    .grid {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+}
+section.event.vr {
+  padding: 200px 0 50px;
+  .grid {
+    place-items: center;
+  }
+  div:nth-child(2) {
+    h6 {
+      color: #fff;
+      font-size: 44px;
+      font-weight: 400;
+      line-height: 140%; /* 89.6px */
+    }
+  }
+  img {
+    height: auto;
+    max-height: 400px;
+  }
+  .container {
+    border-bottom: none;
+  }
+}
+
+.btn_links {
+  border-radius: 104.681px;
+  border: 1.047px solid #1b3459;
+  background: #fff;
+  padding: 16.749px;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  width: fit-content;
+  img {
+    width: 20px;
+    height: 20px;
+    object-fit: contain;
+  }
+
+  a {
+    transition: all 0.5s ease-in-out;
+  }
+
+  a:hover {
+    color: #f1b700;
+  }
+}
+
+.partners {
+  img {
+    max-width: 200px;
+    width: 150px;
+    height: 150px;
+    object-fit: contain;
+  }
+}
+
+section.press.honorary.partner {
+  h2 {
+    margin-bottom: 2rem;
+    padding-bottom: 4rem;
+    position: relative;
+    text-align: center;
+    span:first-of-type {
+      font-weight: 400;
+      font-family: "customRegular", sans-serif;
+    }
+    img {
+      width: 500px;
+      position: absolute;
+      top: 25%;
+      left: 30%;
+      transform: translate(-50%, -50%);
+    }
+  }
+
+  h3 {
+    color: #1b3459;
+    font-family: "customRegular", sans-serif;
+    font-size: 40.247px;
+    font-weight: 700;
+    line-height: 133%; /* 66.828px */
+  }
+
+  p {
+    color: #1b3459;
+    font-family: "camptonThin", sans-serif;
+    font-size: 20.123px;
+    font-style: normal;
+    margin-bottom: 1px;
+    line-height: 177.5%; /* 44.594px */
+    span:first-of-type {
+      font-weight: 700;
+    }
+    span:last-of-type {
+      font-weight: 400;
+    }
+  }
+}
+section.meet {
+  background: #1b3459;
+
+  h2 {
+    margin-bottom: 2rem;
+    padding-bottom: 4rem;
+    position: relative;
+    text-align: center;
+    span:first-of-type {
+      font-weight: 400;
+      font-family: "customRegular", sans-serif;
+    }
+    img {
+      width: 500px;
+      position: absolute;
+      top: 25%;
+      left: 30%;
+      transform: translate(-50%, -50%);
+    }
+  }
+
+  p {
+    color: white;
+  }
+
+  .cards {
+    .card_top:nth-child(1) {
+      position: relative;
+
+      img:first-of-type {
+        max-height: 400px;
+        object-position: top;
+        object-fit: cover;
+      }
+      img:last-of-type {
+        position: absolute;
+        width: 53.184px;
+        height: 62.237px;
+        bottom: -2%;
+        right: 0;
+      }
+    }
+    h4 {
+      color: #fff;
+      font-size: 22px;
+      // font-size: 26px;
+      font-weight: 700;
+      // line-height: 241.5%; /* 77.28px */
+      line-height: 171.5%; /* 77.28px */
+    }
+
+    p {
+      color: #fff;
+      font-size: 13px;
+      font-weight: 400;
+      line-height: 133%; /* 18.62px */
+    }
+  }
+
+  .splide__arrow {
+    top: unset;
+    left: unset;
+    bottom: -25%;
+    right: 4%;
+    display: flex;
+    width: 40.213px;
+    height: 40.213px;
+    padding: 5.957px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15957.446px;
+    border: 1.596px solid #f1b700;
+    background: transparent;
+    transition: all 0.5s ease-in-out;
+    & svg {
+      fill: #f1b700;
+    }
+    &:hover {
+      background: #ffc655;
+      svg {
+        fill: #000;
+      }
+    }
+  }
+
+  .splide__arrow--prev {
+    right: 10%;
+  }
+}
+
+section.quotes.partnerships {
+  padding: 220px 0 120px;
+  .quote {
+    &::before {
+      top: -10%;
+      left: 45%;
+      transform: rotate(90deg) translateX(-50%);
+    }
+    &::after {
+      bottom: -48%;
+      left: 45%;
+      transform: rotate(90deg) translateX(-50%);
+    }
+  }
+}
+
+footer {
+  position: relative;
+  border-top: 8px solid #ffc655;
+  padding: 3rem 0;
+  .footer_wrap {
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  }
+
+  .logo {
+    width: 150px;
+    margin-bottom: 1rem;
+  }
+
+  p {
+    margin-bottom: 0.1rem;
+  }
+
+  ul {
+    margin-top: 1rem;
+
+    li {
+      color: #1b3459;
+      font-size: 14.749px;
+      font-weight: 400;
+      line-height: 177.5%; /* 29.729px */
+      margin: 0.5rem 0;
+    }
+
+    .q-btn {
+      padding: 0;
+      min-height: 0;
+    }
+  }
+
+  h3 {
+    color: #1b3459;
+    font-size: 20.123px;
+    font-weight: 700;
+    line-height: 177.5%; /* 44.594px */
+  }
+
+  form {
+    input {
+      background: #fff;
+      color: #1b3459;
+      display: inline-flex;
+      padding: 1rem;
+      align-items: center;
+      border: none;
+      width: 100%;
+    }
+    .q-btn {
+      padding: 10.468px 25.123px;
+      background: #ffc655;
+      color: #1b3459;
+      font-size: 16.749px;
+      font-weight: 700;
+      margin-top: 1rem;
+      line-height: 133%; /* 22.276px */
+    }
+  }
+
+  ::placeholder {
+    color: #1b3459;
+    font-family: "campton", sans-serif;
+    font-size: 14.749px;
+    font-weight: 400;
+    line-height: 177.5%; /* 29.729px */
+  }
+
+  .logo_area p {
+    color: #1b3459;
+    font-size: 13.655px;
+    font-weight: 400;
+    line-height: 177.5%; /* 26.013px */
+  }
+
+  .btn_links {
+    background: #1b3459;
+    width: 100%;
+    justify-content: center;
+    margin-top: 1rem;
+    i {
+      color: white;
+    }
+  }
+
+  .row.terms_ {
+    margin-top: 2rem;
+    p {
+      color: #1b3459;
+      font-size: 13.655px;
+      font-weight: 700;
+      line-height: 177.5%; /* 26.013px */
+    }
+  }
+
+  .goUp {
+    position: absolute;
+    top: 2%;
+    right: 2%;
+    display: flex;
+    width: 43.499px;
+    height: 43.499px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 16704.422px;
+    border: 1.67px solid #ffc655;
+    background: #ffc655;
+    font-size: 1rem;
+    min-height: auto;
+  }
+}
+@media (min-width: 1280px) {
+  section .left p,
+  p {
+    font-size: 16px;
+  }
+}
 @media (max-width: 1100px) {
   // typography
 
@@ -408,5 +1259,21 @@ section.icon {
     font-size: 25.28px;
   }
 
+  section.event.started .lists h4 {
+    font-size: 22px;
+  }
+  section.event.vr div:nth-child(2) h6 {
+    font-size: 34px;
+  }
+  .h3 {
+    font-size: 25px;
+  }
+  p {
+    font-size: 14px;
+  }
+
+  section.press.honorary.partner h3 {
+    font-size: 30.247px;
+  }
   // section
 }
