--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1580,7 +1580,7 @@ footer {
   }
 
   section.meet .splide__arrow--prev {
-    right: 15%;
+    right: 20%;
   }
   section h2 img {
     width: 300px !important;
@@ -1692,7 +1692,7 @@ footer {
   }
 
   section.press.honorary.partner {
-    padding: 10px 0;
+    // padding: 10px 0;
   }
   section.intro {
     .video_area {
@@ -1793,7 +1793,7 @@ footer {
   }
 
   section.press.honorary.partner {
-    padding: 10px 0;
+    // padding: 10px 0;
 
     h3 {
       font-size: 25.247px;
